2004-02-20  Christopher Faylor  <cgf@redhat.com>

	* path.cc (conv_path_list): Return error condition.
	(copy1): New function.
	(copyenc): New function.
	(mount_item::fnmunge): Return error condition.  Use new functions to
	copy strings.
	(mount_item::build_win32): Ditto.
	(mount_info::conv_to_win32_path): Return error condition.
	(cygwin_conv_to_posix_path): Return result of path conversion.
	(cygwin_conv_to_full_posix_path): Ditto.
	(return_with_errno): New macro.
	(cygwin_win32_to_posix_path_list): Use new macro to potentially set
	errno.
	(cygwin_posix_to_win32_path_list): Ditto.
	* path.h (mount_item::fnmunge): Add size argument.
	(mount_item::build_win32): Ditto.

2004-02-20  Corinna Vinschen  <corinna@vinschen.de>

	* getopt.c: Avoid useless compiler warnings.

2004-02-20  Corinna Vinschen  <corinna@vinschen.de>

	* getopt.c: Replace with latest vanilla(!) OpenBSD version 1.16.

2004-02-18  Christopher Faylor  <cgf@redhat.com>

	* fork.cc (fork_child): Invert sense of test which defeated correct
	handling in a fork from a non-main thread.

	* dcrt0.cc (initial_env): Eliminate parameter and just send DebugBreak
	when appropriate.
	(dll_crt0_0): Reflect parameter change to initial_env.
	(dll_crt0_1): Don't call initial_env.

2004-02-18  Christopher Faylor  <cgf@redhat.com>

	* gendef (stabilize_sig_stack): New function.
	(setjmp): Import, add sig stack handling.  Store sig stack info.
	(longjmp): Call stabilize_sig_stack.  Restore sig stack info.
	* config/i386/setjmp.c: Remove.

2004-02-17  Corinna Vinschen  <corinna@vinschen.de>

	* fork.cc (fork_child): Move fixup_shms_after_fork so that
	signal_arrived is initialized when calling it.

2004-02-17  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in (clean): Clean libserver, too.

	* fhandler.cc (fhandler_base::~fhandler_base): Remove path_conv cleanup.
	* syscalls.cc (chroot): Ditto.
	* path.cc (path_conv::~path_conv): Define new destructor.
	(conv_path_list_buf_size): Remove explicit path_conv cleanup.